Fixed overflow issue, and close menu on logo-click

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -23,6 +23,7 @@ body {
 .fullscreen {
   height: 100vh;
   width: 100%;
+  overflow: hidden;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
